fixed nav bar spacing

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -47,10 +47,9 @@
   /*     NAVIGATION        */
   /* ===================== */
   .nav-container {
-    /* max-width: 1200px; */
+    max-width: 1200px;
     width: 100%;
     margin: 0;
-    padding: 30 0px;
     display: flex;
     justify-content: space-between;
     align-items: center;
